fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -341,7 +341,7 @@
 }
 
 *:not([class*=bp3-icon]) {
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
 }
 
 *:not(html):not(.roam-topbar[class*=bp3]):not([class*=CodeMirror]) {
@@ -404,17 +404,15 @@ body,
 /*------------------------------------
 # REMOVE USELESS DIVS
 ------------------------------------*/
-/*-------------------------
-# GLOBAL SETUP
--------------------------*/
-/*------------------------------------------
-# workspace
-------------------------------------------*/
 /*------------------------------------
 # popups
 ------------------------------------*/
 .bp3-menu-item {
   color: initial;
+}
+
+button[type=button] {
+  z-index: inherit;
 }
 
 /*-------------------------------------------------------- Preferences --------------------------------------------------------*/
@@ -533,7 +531,7 @@ body,
   position: fixed !important;
   top: var(--searchbar-top);
   left: var(--searchbar-left);
-  z-index: 1000;
+  z-index: 999999;
   /* place at front of page */
   transform: translate(-50%, 0);
 }
@@ -655,7 +653,7 @@ body,
 .rm-title-display {
   font-size: 36px;
   color: #222222 !important;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
@@ -663,21 +661,21 @@ body,
 .rm-heading-level-1 {
   color: #222222;
   font-size: 30px;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
 .rm-heading-level-2 {
   color: #222222;
   font-size: 25px;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
 .rm-heading-level-3 {
   color: #222222;
   font-size: 20px;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
@@ -685,7 +683,7 @@ body,
 #app {
   color: #222222;
   font-size: 12px;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
@@ -693,7 +691,7 @@ body,
 .rm-bold {
   font-size: 12px;
   color: #222222;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
@@ -701,7 +699,7 @@ body,
 .rm-italics {
   font-size: 15px;
   color: #222222;
-  font-family: "Ubuntu", Verdana, sans-serif !important;
+  font-family: "Ubuntu", Verdana, sans-serif;
   margin: 0px;
 }
 
