--- a/sass/global.scss
+++ b/sass/global.scss
@@ -118,19 +118,13 @@ body,
 //   }
 // }
 
-/*-------------------------
-# GLOBAL SETUP
--------------------------*/
-
-/*------------------------------------------
-# workspace
-------------------------------------------*/
-.roam-sidebar {
-}
-
 /*------------------------------------
 # popups
 ------------------------------------*/
 .bp3-menu-item {
   color: initial;
+}
+
+button[type="button"] {
+  z-index: inherit;
 }
