--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -6,7 +6,7 @@
 $font--fallback: Verdana, sans-serif;
 
 @mixin font-family {
-  font-family: "Ubuntu", $font--fallback !important;
+  font-family: "Ubuntu", $font--fallback;
 }
 
 @mixin font-title {
